# bobetocalo_eccv18

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
data/: 300w_private.pb  300w_public.pb  aflw.pb  cofw.pb  menpo.pb  wflw.pb
include/: FaceAlignment3dde.hpp  FaceAlignmentDcfe.hpp  GaussianChannelFeatures.hpp  HonariChannelFeatures.hpp  ShapeCascade.hpp
src/: FaceAlignment3dde.cpp  FaceAlignmentDcfe.cpp  GaussianChannelFeatures.cpp  HonariChannelFeatures.cpp
test/: face_alignment_bobetocalo_eccv18_test.cpp
